Migrate to Firestore, store urls as base64 to use as id in database